--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="index.js" defer></script>
-		<title>Page d'accueil</title>
+		<title>Page d'accueil Brice</title>
 	</head>
 	<body></body>
 </html>
