--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
     <script src="index.js" defer></script>
     <title>Page d'accueil</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
