--- a/index.html
+++ b/index.html
@@ -36,6 +36,50 @@
   <body>
     <header></header>
     <main></main>
-    <footer></footer>
+
+    <footer class="container-fluid p-3">
+      <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
+        <img
+          class="row mx-auto d-block"
+          src="./media/MicrosoftTeams-image.png"
+          alt="Sunpower logo"
+        />
+      </div>
+      <div id="site_map__footer" class="row p-1 mt-5">
+        <ul class="col list-unstyled">
+          <li class="mb-3"><a href="">Ombrières solaires</a></li>
+          <li class="mb-3"><a href="">Carte interactive</a></li>
+          <li class="mb-3"><a href="">Produits</a></li>
+          <li class="mb-3"><a href="">Activités</a></li>
+          <li class="mb-3"><a href="">Partenaires</a></li>
+        </ul>
+        <ul class="col list-unstyled">
+          <li class="mb-3"><a href="">À propos</a></li>
+          <li class="mb-3"><a href="">Mentions légales</a></li>
+          <li class="mb-3"><a href="">CGV</a></li>
+          <li class="mb-3"><a href="">Plan du Site</a></li>
+        </ul>
+      </div>
+      <div class="container-fluid text-center">
+        <a href=""> Nous contacter</a>
+      </div>
+      <hr />
+      <div
+        id="social__footer"
+        class="container-fluid d-flex justify-content-center"
+        style="height: 5em"
+      >
+        <i class="bi bi-facebook col-3 fs-1 text-center blue"></i
+        ><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
+        ><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
+      </div>
+
+      <div id="copyright" class="container text-center">
+        <p>
+          <span>&copy;</span> 2022 Sunpower - Produits & Activités autour des
+          énergies renouvelables
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
