--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<header class="container">
       <nav class="navbar">
         <a class="navbar-brand" href="index.html">
-					<img src="media/logo_mobile.png" width="50" />
+					<img src="./media/logo_mobile.png" width="50" />
           </a>
           
 					<i class="bi bi-list text-brand-primary fs-1" id="burgerMenuIcon"></i>
@@ -72,7 +72,7 @@
       <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
         <img
           class="row mx-auto d-block"
-          src="./media/MicrosoftTeams-image.png"
+          src="./media/logo.png"
           alt="Sunpower logo"
         />
       </div>
