homepage : responsive to viewport

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
         <img
           class="row mx-auto d-block"
-          src="./media/MicrosoftTeams-image.png"
+          src="./media/logo.png"
           alt="Sunpower logo"
         />
       </div>
