homepage 2nd frame

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 		</div>
 		<!-- End burger menu -->
 		<main id="main" class="container">
-			<div class="d-flex flex-column justify-content-evenly" style="height: 90vh">
+			<div id="firstFrame" class="d-flex flex-column justify-content-evenly" style="height: 90vh">
 				<p class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3">
 					L'énergie <span class="text-brand-ternary">verte</span> & <span class="text-brand-ternary">renouvelable</span> à portée de main
 				</p>
 				<div class="row">
-					<p class="mb-4 col-10 fs-8">
+					<p class="col-10 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Nous concevons</span
 						><span class="paragraph-brand">
 							et commercialisons des panneaux solaires à haut rendement. Fort de plusieurs années de conception, nous proposons aujourd’hui
@@ -72,21 +72,22 @@
 					</p>
 				</div>
 				<div class="row">
-					<p class="text-center mb-4 col-10 offset-1 fs-8">
-						<span class="text-brand-primary fw-bold fs-7">L’ombrière solaire</span><br /><span class="">
-							Avec ce bijou de technologie, n’importe quelle véhicule électrique pourra recharger ses batteries avec une
-							<span class="text-brand-ternary">énergie verte et non polluante</span> tout en jouant le rôle d’abri.</span
-						>
+					<p class="text-center col-10 offset-1 fs-8">
+						<span class="text-brand-primary fw-bold fs-7">L’ombrière solaire</span><br />
+						Avec ce bijou de technologie, n’importe quelle véhicule électrique pourra recharger ses batteries avec une
+						<span class="text-brand-ternary">énergie verte et non polluante</span> tout en jouant le rôle d’abri.
 					</p>
 				</div>
 				<div class="row">
 					<p class="text-end col-10 offset-2 fs-8">
-						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
-						><span class="paragraph-brand">
-							est installée en fonction des normes et contraintes du terrain et/ou du client. Pour en savoir plus n’hésitez pas à utiliser
-							notre
-							<a href="" class="text-brand-primary">formulaire de contact</a>.
-						</span>
+						<span class="text-brand-primary fw-bold fs-7">Nos collaborateurs</span><br />
+						et partenaires principaux sont l’<a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>, l’<a
+							href="https://www.ines-solaire.org/"
+							class="text-brand-primary"
+							>INES</a
+						>
+						et le <a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>. Certains nous soutiennent depuis de nombreuses années et
+						sont gages de confiance pour nos clients.
 					</p>
 				</div>
 				<div class="container-fluid d-flex justify-content-center align-items-center mt-5">
@@ -98,6 +99,26 @@
 							<i class="fs-1 bi bi-chevron-double-down"></i></div
 					></a>
 				</div>
+			</div>
+			<div id="secondFrame">
+				<div class="row">
+					<p class="col-10 text-center offset-1 fs-8">
+						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
+						><span class="paragraph-brand">
+							est installée en fonction des normes et contraintes du terrain et/ou du client. Pour en savoir plus n’hésitez pas à utiliser
+							notre
+							<a href="" class="text-brand-primary">formulaire de contact</a>.
+						</span>
+					</p>
+				</div>
+				<div class="row">
+					<p class="mb-4 col-10 fs-8">
+						<span class="text-brand-primary fw-bold fs-7">Une carte interactive</span><br />
+						est à disposition ci-dessous pour vous permettre de connaître la localisation de chaque ombrière et le nombre de bornes de
+						recharge.
+					</p>
+				</div>
+				<div class="row"><img src="../sunpower/media/map.png" class="img-fluid" alt="Carte interactive" /></div>
 			</div>
 		</main>
 
