--- a/index.html
+++ b/index.html
@@ -38,36 +38,55 @@
 						<img src="media/logo_mobile.png" width="50" />
 					</a>
 
-					<i class="bi bi-list text-brand-primary fs-1" id="burgerMenuIcon"></i>
+					<i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
 				</nav>
 			</header>
 		</div>
 		<!-- Burger menu (hidden at start) -->
 		<div id="burgerExpanded" class="d-none">
-			<ul class="container list-unstyled text-center text-shadow d-flex flex-column justify-content-evenly" style="height: 85vh">
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">Ombrières solaires</a></li>
+			<ul
+				class="container list-unstyled text-center text-shadow d-flex flex-column justify-content-evenly"
+				style="height: 85vh"
+			>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">Ombrières solaires</a>
+				</li>
 				<li class=""><hr class="text-brand-ternary border-5 opacity-75" /></li>
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">Produits</a></li>
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">Carte interactive</a></li>
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">Activités</a></li>
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">Partenaires</a></li>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">Produits</a>
+				</li>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">Carte interactive</a>
+				</li>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">Activités</a>
+				</li>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">Partenaires</a>
+				</li>
 				<li class=""><hr class="text-brand-ternary border-5 opacity-75" /></li>
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">Nous contacter</a></li>
-				<li class="fs-4"><a href="" class="text-uppercase text-brand-primary">À propos</a></li>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">Nous contacter</a>
+				</li>
+				<li class="fs-4">
+					<a href="" class="text-uppercase text-brand-primary">À propos</a>
+				</li>
 			</ul>
 		</div>
 		<!-- End burger menu -->
+
 		<main id="main" class="container">
-			<div id="firstFrame" class="d-flex flex-column justify-content-evenly" style="height: 90vh">
+			<div id="firstFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 90vh">
 				<p class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3">
-					L'énergie <span class="text-brand-ternary">verte</span> & <span class="text-brand-ternary">renouvelable</span> à portée de main
+					L'énergie <span class="text-brand-ternary">verte</span> &
+					<span class="text-brand-ternary">renouvelable</span> à portée de main
 				</p>
 				<div class="row">
 					<p class="col-10 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Nous concevons</span
 						><span class="paragraph-brand">
-							et commercialisons des panneaux solaires à haut rendement. Fort de plusieurs années de conception, nous proposons aujourd’hui
-							notre fer de lance :</span
+							et commercialisons des panneaux solaires à haut rendement. Fort de plusieurs années de conception, nous
+							proposons aujourd’hui notre fer de lance :</span
 						>
 					</p>
 				</div>
@@ -75,7 +94,8 @@
 					<p class="text-center col-10 offset-1 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">L’ombrière solaire</span><br />
 						Avec ce bijou de technologie, n’importe quelle véhicule électrique pourra recharger ses batteries avec une
-						<span class="text-brand-ternary">énergie verte et non polluante</span> tout en jouant le rôle d’abri.
+						<span class="text-brand-ternary">énergie verte et non polluante</span>
+						tout en jouant le rôle d’abri.
 					</p>
 				</div>
 				<div class="row">
@@ -86,11 +106,12 @@
 							class="text-brand-primary"
 							>INES</a
 						>
-						et le <a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>. Certains nous soutiennent depuis de nombreuses années et
-						sont gages de confiance pour nos clients.
+						et le
+						<a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>. Certains nous soutiennent depuis de
+						nombreuses années et sont gages de confiance pour nos clients.
 					</p>
 				</div>
-				<div class="container-fluid d-flex justify-content-center align-items-center mt-5">
+				<div class="container-fluid d-flex justify-content-center align-items-center">
 					<a href=""
 						><div
 							class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
@@ -100,13 +121,14 @@
 					></a>
 				</div>
 			</div>
-			<div id="secondFrame">
+
+			<div id="secondFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 100vh">
 				<div class="row">
 					<p class="col-10 text-center offset-1 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
 						><span class="paragraph-brand">
-							est installée en fonction des normes et contraintes du terrain et/ou du client. Pour en savoir plus n’hésitez pas à utiliser
-							notre
+							est installée en fonction des normes et contraintes du terrain et/ou du client. Pour en savoir plus
+							n’hésitez pas à utiliser notre
 							<a href="" class="text-brand-primary">formulaire de contact</a>.
 						</span>
 					</p>
@@ -114,11 +136,79 @@
 				<div class="row">
 					<p class="mb-4 col-10 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Une carte interactive</span><br />
-						est à disposition ci-dessous pour vous permettre de connaître la localisation de chaque ombrière et le nombre de bornes de
-						recharge.
+						est à disposition pour vous permettre de connaître la localisation de chaque ombrière et le nombre de bornes
+						de recharge.
 					</p>
 				</div>
-				<div class="row"><img src="../sunpower/media/map.png" class="img-fluid" alt="Carte interactive" /></div>
+				<div class="row position-relative p-2">
+					<img src="../media/map.png" class="img-fluid opacity-75 p-0 rounded" alt="Carte interactive" />
+					<div class="position-absolute h-100 w-100 d-flex justify-content-center align-items-center">
+						<p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p>
+					</div>
+				</div>
+				<div class="container-fluid d-flex justify-content-center align-items-center">
+					<a href=""
+						><div
+							class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
+							style="height: 45px; width: 45px"
+						>
+							<i class="fs-1 bi bi-chevron-double-down"></i></div
+					></a>
+				</div>
+			</div>
+			<div id="thirdFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 100vh">
+				<p class="text-brand-primary fw-bold text-uppercase text-center">La société Sunpower</p>
+
+				<div class="row">
+					<p class="mb-4 col-10 fs-8">
+						<span class="text-brand-primary fw-bold fs-7">Fondée en 2013 ,</span>
+						notre société Sunpower est basée à Grenoble. Son capital est de 10 millions d’euros.
+					</p>
+				</div>
+				<div class="row">
+					<div class="col-4"><img src="../media/serge.png" alt="" /></div>
+					<div class="col-8">
+						<p class="text-end fs-8">
+							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Serge turing</span>
+							<br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+							et
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-8">
+						<p class="fs-8">
+							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Hugo Oppenheimer</span
+							><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+							et
+						</p>
+					</div>
+					<div class="col-4"><img src="../media/hugo.png" alt="" /></div>
+				</div>
+				<div class="row">
+					<div class="col-4"><img src="../media/alex.png" alt="" /></div>
+					<div class="col-8">
+						<p class="text-end fs-8">
+							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Alex Pareneinstein</span
+							><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+							et
+						</p>
+					</div>
+				</div>
+				<div class="row mb-4">
+					<p class="text-brand-primary fs-7 fw-bold">Points clés:</p>
+					<ul class="list-unstyled fs-8 px-4">
+						<li><span class="text-brand-ternary">30M d’euros</span> de levée de fond</li>
+						<li><span class="text-brand-ternary">2M d’euros</span> d’aide de BPIFrance</li>
+						<li>
+							<!-- attention espace non voulu à cause du formateur, à régler avec linter -->
+							Collaboration avec l'<a href="https://www.ines-solaire.org/" class="text-brand-primary">INES</a>, le
+							<a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>
+							et l’
+							<a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</main>
 
@@ -146,7 +236,8 @@
 			</div>
 			<hr />
 			<div id="social__footer" class="container-fluid d-flex justify-content-center" style="height: 5em">
-				<i class="bi bi-facebook col-3 fs-1 text-center blue"></i><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
+				<i class="bi bi-facebook col-3 fs-1 text-center blue"></i
+				><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
 				><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
 			</div>
 
