templates styles pages

--- a/index.html
+++ b/index.html
@@ -56,17 +56,18 @@
         <ul class="container list-unstyled text-center ">
           <li class="p-4 mt-4 fs-4"><a href="" class="text-uppercase text-brand-primary">Ombrières solaires</a></li>
           <li class="p-2"><hr class="text-brand-ternary border-5 opacity-75"></li>
-          <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Produits</a></li>
+          <li class="p-4  fs-4"><a href="./pages/product.html" class="text-uppercase text-brand-primary">Produits</a></li>
           <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Carte interactive</a></li>
-          <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Activités</a></li>
-          <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Partenaires</a></li>
+          <li class="p-4  fs-4"><a href="./pages/activities.html" class="text-uppercase text-brand-primary">Activités</a></li>
           <li class="p-2"><hr class="text-brand-ternary border-5 opacity-75"></li>
           <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Nous contacter</a></li>
-          <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">À propos</a></li>
+          <li class="p-4  fs-4"><a href="../sunpower/pages/propos.html" class="text-uppercase text-brand-primary">À propos</a></li>
         </ul>
       </div>
       <!-- End burger menu -->
-		<main id="main"><p>test</p></main>
+		<main id="main">
+    
+    </main>
 
     <footer class="container-fluid p-3">
       <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
