--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 	</head>
 	<body>
 		<div class="bg-brand-secondary">
+			<!-- Navbar -->
 			<header class="container" style="height: 10vh">
 				<nav class="navbar">
 					<a class="navbar-brand" href="index.html">
-						<img src="media/logo_mobile.png" width="50" />
+						<img src="media/logo_mobile.png" width="50" alt="Logo" />
 					</a>
 
 					<i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
@@ -51,7 +52,7 @@
 				<li class="fs-4">
 					<a href="" class="text-uppercase text-brand-primary">Ombrières solaires</a>
 				</li>
-				<li class=""><hr class="text-brand-ternary border-5 opacity-75" /></li>
+				<li><hr class="text-brand-ternary border-5 opacity-75" /></li>
 				<li class="fs-4">
 					<a href="" class="text-uppercase text-brand-primary">Produits</a>
 				</li>
@@ -64,7 +65,7 @@
 				<li class="fs-4">
 					<a href="" class="text-uppercase text-brand-primary">Partenaires</a>
 				</li>
-				<li class=""><hr class="text-brand-ternary border-5 opacity-75" /></li>
+				<li><hr class="text-brand-ternary border-5 opacity-75" /></li>
 				<li class="fs-4">
 					<a href="" class="text-uppercase text-brand-primary">Nous contacter</a>
 				</li>
@@ -76,7 +77,8 @@
 		<!-- End burger menu -->
 
 		<main id="main" class="container">
-			<div id="firstFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 90vh">
+			<!-- First frame -->
+			<section id="firstFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 90vh">
 				<p class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3">
 					L'énergie <span class="text-brand-ternary">verte</span> &
 					<span class="text-brand-ternary">renouvelable</span> à portée de main
@@ -117,12 +119,13 @@
 							class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
 							style="height: 45px; width: 45px"
 						>
+							<!--mettre le style dans le CSS /!\-->
 							<i class="fs-1 bi bi-chevron-double-down"></i></div
 					></a>
 				</div>
-			</div>
-
-			<div id="secondFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 100vh">
+			</section>
+			<!-- Second frame -->
+			<section id="secondFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 100vh">
 				<div class="row">
 					<p class="col-10 text-center offset-1 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
@@ -152,11 +155,12 @@
 							class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
 							style="height: 45px; width: 45px"
 						>
+							<!--Style dans css !-->
 							<i class="fs-1 bi bi-chevron-double-down"></i></div
 					></a>
 				</div>
-			</div>
-			<div id="thirdFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 100vh">
+			</section>
+			<section id="thirdFrame" class="d-flex flex-column justify-content-evenly p-3" style="height: 100vh">
 				<p class="text-brand-primary fw-bold text-uppercase text-center">La société Sunpower</p>
 
 				<div class="row">
@@ -166,7 +170,7 @@
 					</p>
 				</div>
 				<div class="row">
-					<div class="col-4"><img src="../media/serge.png" alt="" /></div>
+					<div class="col-4"><img src="../media/serge.png" alt="Serge Turing" /></div>
 					<div class="col-8">
 						<p class="text-end fs-8">
 							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Serge turing</span>
@@ -183,10 +187,10 @@
 							et
 						</p>
 					</div>
-					<div class="col-4"><img src="../media/hugo.png" alt="" /></div>
+					<div class="col-4"><img src="../media/hugo.png" alt="Hugo Oppenheimer" /></div>
 				</div>
 				<div class="row">
-					<div class="col-4"><img src="../media/alex.png" alt="" /></div>
+					<div class="col-4"><img src="../media/alex.png" alt="Alex Pareneinstein" /></div>
 					<div class="col-8">
 						<p class="text-end fs-8">
 							<span class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize">Alex Pareneinstein</span
@@ -209,7 +213,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+			</section>
 		</main>
 
 		<footer class="container-fluid p-3">
