--- a/pages/propos.html
+++ b/pages/propos.html
@@ -70,17 +70,17 @@
             <section class="p-4">
                 <p><span>Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. Son capital est de 10 millions d’euros.</p>
                 <div class="mt-5">
-                    <img class="float-start" src="../media/photos/serge.png" alt="">
+                    <img class="float-start" src="../media/photos/serge.png" alt="Serge turing">
                     <h3>Serge Turing</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
                 </div>
                 <div class="mt-5">
-                    <img class="float-end" src="../media/photos/hugo.png" alt="">
+                    <img class="float-end" src="../media/photos/hugo.png" alt="Hugo Oppenheimer">
                     <h3>Hugo Oppenheimer </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
                 </div>
                 <div class="mt-5">
-                    <img class="float-start" src="../media/photos/alex.png" alt="">
+                    <img class="float-start" src="../media/photos/alex.png" alt="Alex Pareneinstein">
                     <h3>Alex Pareneinstein</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
                 </div> 
@@ -88,7 +88,7 @@
             <section class=" grid gap-5 row p-3 ">
                 <h2>Historique</h2>
                 <div class="bg-light py-3 rounded">
-                    <img src="../media/svg/people_group.svg" alt="">
+                    <img src="../media/svg/people_group.svg" alt=" group of people">
                     <p>Collaboration avec <span class="text-brand-ternary fw-bolder">l’INES</span></p>
                     <p>le <span class="text-brand-ternary fw-bolder">CEA</span> </p>
                     <p>et <span class="text-brand-ternary fw-bolder">l’ADEME</span></p>
@@ -98,13 +98,13 @@
                     </div>
                 </div>
                 <div class="bg-light py-3 rounded">
-                    <img class="p-3" src="../media/svg/Vector.svg" alt="">
+                    <img class="p-3" src="../media/svg/Vector.svg" alt="arrow">
                     <p><span class="text-brand-ternary fw-bolder">30M d'euros</span> de levés</p>
                     <p>+</p>
                     <p><span>2M d'euros</span> d'aide de BPIfrance</p>
                 </div>
                 <div class="bg-light py-3 rounded">
-                    <img class="p-3" src="../media/svg/Vector-1.svg" alt="">
+                    <img class="p-3" src="../media/svg/Vector-1.svg" alt="piggy bank">
                     <p><span class="text-brand-ternary fw-bolder">10m+</span> deuros de capital généré</p>
                 </div>
             </section>
