--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
         style="height: 85vh"
       >
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary"
+          <a
+            href="./pages/product.html#products"
+            class="text-uppercase text-brand-primary"
             >Ombrières solaires</a
           >
         </li>
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary">Produits</a>
+          <a
+            href="./pages/product.html"
+            class="text-uppercase text-brand-primary"
+            >Produits</a
+          >
         </li>
         <li class="fs-4">
           <a href="" class="text-uppercase text-brand-primary"
@@ -67,11 +73,13 @@
           >
         </li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary">Activités</a>
+          <a
+            href="./pages/activities.html"
+            class="text-uppercase text-brand-primary"
+            >Activités</a
+          >
         </li>
-        <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary">Partenaires</a>
-        </li>
+
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
           <a href="" class="text-uppercase text-brand-primary"
@@ -79,7 +87,11 @@
           >
         </li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary">À propos</a>
+          <a
+            href="./pages/propos.html"
+            class="text-uppercase text-brand-primary"
+            >À propos</a
+          >
         </li>
       </ul>
     </div>
