--- a/pages/activities.html
+++ b/pages/activities.html
@@ -42,7 +42,7 @@
 					<img src="../media/logo_mobile.png" width="50" />
           </a>
           
-					<i class="bi bi-list text-brand-primary fs-1" id="burgerMenuIcon"></i>
+					<i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
           
 				</div>
 			</div>
@@ -52,8 +52,8 @@
     </div>
     <!-- Burger menu (hidden at start) -->
     <div id="burgerExpanded" class="d-none">
-        <ul class="container list-unstyled text-center ">
-          <li class="p-4 mt-4 fs-4"><a href="" class="text-uppercase text-brand-primary">Ombrières solaires</a></li>
+        <ul class="container list-unstyled text-center text-shadow d-flex flex-column justify-content-evenly"  style="height: 85vh">
+          <li class="p-4 mt-4 fs-4"><a href="./pages/product.html#products" class="text-uppercase text-brand-primary">Ombrières solaires</a></li>
           <li class="p-2"><hr class="text-brand-ternary border-5 opacity-75"></li>
           <li class="p-4  fs-4"><a href="../pages/product.html" class="text-uppercase text-brand-primary">Produits</a></li>
           <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Carte interactive</a></li>
