--- a/pages/product.html
+++ b/pages/product.html
@@ -43,7 +43,7 @@
 					<img src="../media/logo_mobile.png" width="50" />
           </a>
           
-					<i class="bi bi-list text-brand-primary fs-1" id="burgerMenuIcon"></i>
+					<i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
           
 				</div>
 			</div>
@@ -53,13 +53,12 @@
     </div>
     <!-- Burger menu (hidden at start) -->
     <div id="burgerExpanded" class="d-none">
-        <ul class="container list-unstyled text-center ">
-            <li class="p-4 mt-4 fs-4"><a href="" class="text-uppercase text-brand-primary">Ombrières solaires</a></li>
+        <ul class="container list-unstyled text-center text-shadow d-flex flex-column justify-content-evenly"  style="height: 85vh">
+            <li class="p-4 mt-4 fs-4"><a href="./pages/product.html#products" class="text-uppercase text-brand-primary">Ombrières solaires</a></li>
             <li class="p-2"><hr class="text-brand-ternary border-5 opacity-75"></li>
             <li class="p-4  fs-4"><a href="../pages/product.html" class="text-uppercase text-brand-primary">Produits</a></li>
             <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Carte interactive</a></li>
             <li class="p-4  fs-4"><a href="../pages/activities.html" class="text-uppercase text-brand-primary">Activités</a></li>
-  
             <li class="p-2"><hr class="text-brand-ternary border-5 opacity-75"></li>
             <li class="p-4  fs-4"><a href="" class="text-uppercase text-brand-primary">Nous contacter</a></li>
             <li class="p-4  fs-4"><a href="../pages/propos.html" class="text-uppercase text-brand-primary">À propos</a></li>
@@ -67,7 +66,7 @@
       </div>
       <!-- End burger menu -->
 		<main id="main">
-            <section class="container  mt-3 p-3 ">
+            <section class="container   p-3 ">
                 <div class="row p-3 ">
                     <h1 class="text-center fs-2">Les ombrières solaires</h1>
                     <p class="">Le développement des ombrières solaires pour la recharge des véhicules
@@ -134,7 +133,7 @@
       <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
         <img
           class="row mx-auto d-block"
-          src="./media/logo.png"
+          src="../media/logo.png"
           alt="Sunpower logo"
         />
       </div>
