contact page finished

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary"
+          <a
+            href="./pages/contact.html"
+            class="text-uppercase text-brand-primary"
             >Nous contacter</a
           >
         </li>
