--- a/pages/propos.html
+++ b/pages/propos.html
@@ -31,6 +31,8 @@
 		
 
     <link rel="stylesheet" href="../style.css" />
+    
+    <script src="../genericTags.js" defer></script>
     <script src="../index.js" defer></script>
     <title>À propos</title>
   </head>
