added responsive map

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 					</p>
 				</div>
 				<div class="container-fluid d-flex justify-content-center align-items-center">
-					<a href=""
-						><div
-							class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
-							style="height: 45px; width: 45px"
-						>
-							<!--mettre le style dans le CSS /!\-->
-							<i class="fs-1 bi bi-chevron-double-down"></i></div
-					></a>
+					<!--mettre le style dans le CSS /!\-->
+					<button
+						type="button"
+						onclick="document.querySelector('#secondFrame').scrollIntoView({behavior:'smooth'})"
+						class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold scrollButton"
+					>
+						<i class="fs-1 bi bi-chevron-double-down"></i>
+					</button>
 				</div>
 			</section>
 			<!-- Second frame -->
