Contact Enterprise Form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,7 +131,7 @@
             </li>
             <li class="rounded bg-brand-primary">
               <a
-                href=""
+                href="./contact_ent_form.html"
                 class="d-block p-2 rounded text-decoration-none text-white h-100 w-100"
                 >Une Entreprise <span class="d-block">Et/Ou</span> Une
                 Collectivité</a
