--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 		<link rel="stylesheet" href="style.css" />
 		<script src="genericTags.js" defer></script>
 		<script src="index.js" defer></script>
+		<script src="../js/scrollDown.js" defer></script>
 		<title>Page d'accueil</title>
 	</head>
 	<body>
 		<main id="main" class="container">
 			<!-- First frame -->
-			<section id="firstFrame" class="d-flex flex-column justify-content-evenly p-3">
+			<section id="frame1" class="d-flex flex-column justify-content-evenly p-3">
 				<p class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3">
 					L'énergie <span class="text-brand-ternary">verte</span> &
 					<span class="text-brand-ternary">renouvelable</span> à portée de main
@@ -69,19 +70,9 @@
 						nombreuses années et sont gages de confiance pour nos clients.
 					</p>
 				</div>
-				<div class="container-fluid d-flex justify-content-center align-items-center">
-					<!--mettre le style dans le CSS /!\-->
-					<button
-						type="button"
-						onclick="document.querySelector('#secondFrame').scrollIntoView({behavior:'smooth'})"
-						class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold scrollButton"
-					>
-						<i class="fs-1 bi bi-chevron-double-down"></i>
-					</button>
-				</div>
 			</section>
 			<!-- Second frame -->
-			<section id="secondFrame" class="d-flex flex-column justify-content-evenly p-3">
+			<section id="frame2" class="d-flex flex-column justify-content-evenly p-3">
 				<div class="row">
 					<p class="col-10 text-center offset-1 fs-8">
 						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
@@ -105,18 +96,8 @@
 						<p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p>
 					</div>
 				</div>
-				<div class="container-fluid d-flex justify-content-center align-items-center">
-					<a href=""
-						><div
-							class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
-							style="height: 45px; width: 45px"
-						>
-							<!--Style dans css !-->
-							<i class="fs-1 bi bi-chevron-double-down"></i></div
-					></a>
-				</div>
 			</section>
-			<section id="thirdFrame" class="d-flex flex-column justify-content-evenly p-3">
+			<section id="frame3" class="d-flex flex-column justify-content-evenly p-3">
 				<p class="text-brand-primary fw-bold text-uppercase text-center">La société Sunpower</p>
 
 				<div class="row">
