--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     ></script>
 
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js" defer></script>
+    <script src="./index.js" defer></script>
     <title>Page d'accueil</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
       <header class="container" style="height: 10vh">
         <nav class="navbar">
           <a class="navbar-brand" href="index.html">
-            <img src="media/logo_mobile.png" width="50" alt="Logo" />
+            <img src="../media/logo_mobile.png" width="50" alt="Logo" />
           </a>
 
           <i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
@@ -56,42 +56,46 @@
           <a
             href="./pages/product.html#products"
             class="text-uppercase text-brand-primary"
-            >Ombrières solaires</a
           >
+            Ombrières solaires
+          </a>
         </li>
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
           <a
             href="./pages/product.html"
             class="text-uppercase text-brand-primary"
-            >Produits</a
           >
+            Produits
+          </a>
         </li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary"
-            >Carte interactive</a
-          >
+          <a href="" class="text-uppercase text-brand-primary">
+            Carte interactive
+          </a>
         </li>
         <li class="fs-4">
           <a
             href="./pages/activities.html"
             class="text-uppercase text-brand-primary"
-            >Activités</a
           >
+            Activités
+          </a>
         </li>
 
         <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
         <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary"
-            >Nous contacter</a
-          >
+          <a href="" class="text-uppercase text-brand-primary">
+            Nous contacter
+          </a>
         </li>
         <li class="fs-4">
           <a
             href="./pages/propos.html"
             class="text-uppercase text-brand-primary"
-            >À propos</a
           >
+            À propos
+          </a>
         </li>
       </ul>
     </div>
@@ -107,63 +111,66 @@
         <p
           class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3"
         >
-          L'énergie <span class="text-brand-ternary">verte</span> &
-          <span class="text-brand-ternary">renouvelable</span> à portée de main
+          L'énergie
+          <span class="text-brand-ternary">verte</span>
+          &
+          <span class="text-brand-ternary">renouvelable</span>
+          à portée de main
         </p>
         <div class="row">
           <p class="col-10 fs-8">
-            <span class="text-brand-primary fw-bold fs-7">Nous concevons</span
-            ><span class="paragraph-brand">
+            <span class="text-brand-primary fw-bold fs-7">Nous concevons</span>
+            <span class="paragraph-brand">
               et commercialisons des panneaux solaires à haut rendement. Fort de
               plusieurs années de conception, nous proposons aujourd’hui notre
-              fer de lance :</span
-            >
+              fer de lance :
+            </span>
           </p>
         </div>
         <div class="row">
           <p class="text-center col-10 offset-1 fs-8">
-            <span class="text-brand-primary fw-bold fs-7"
-              >L’ombrière solaire</span
-            ><br />
+            <span class="text-brand-primary fw-bold fs-7">
+              L’ombrière solaire
+            </span>
+            <br />
             Avec ce bijou de technologie, n’importe quelle véhicule électrique
             pourra recharger ses batteries avec une
-            <span class="text-brand-ternary"
-              >énergie verte et non polluante</span
-            >
+            <span class="text-brand-ternary">
+              énergie verte et non polluante
+            </span>
             tout en jouant le rôle d’abri.
           </p>
         </div>
         <div class="row">
           <p class="text-end col-10 offset-2 fs-8">
-            <span class="text-brand-primary fw-bold fs-7"
-              >Nos collaborateurs</span
-            ><br />
-            et partenaires principaux sont l’<a
-              href="https://www.ademe.fr/"
-              class="text-brand-primary"
-              >ADEME</a
-            >, l’<a
-              href="https://www.ines-solaire.org/"
-              class="text-brand-primary"
-              >INES</a
-            >
+            <span class="text-brand-primary fw-bold fs-7">
+              Nos collaborateurs
+            </span>
+            <br />
+            et partenaires principaux sont l’
+            <a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>
+            , l’
+            <a href="https://www.ines-solaire.org/" class="text-brand-primary">
+              INES
+            </a>
             et le
-            <a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>.
-            Certains nous soutiennent depuis de nombreuses années et sont gages
-            de confiance pour nos clients.
+            <a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>
+            . Certains nous soutiennent depuis de nombreuses années et sont
+            gages de confiance pour nos clients.
           </p>
         </div>
         <div
           class="container-fluid d-flex justify-content-center align-items-center"
         >
-          <a href=""
-            ><div
+          <a href="">
+            <div
               class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
               style="height: 45px; width: 45px"
             >
               <!--mettre le style dans le CSS /!\-->
-              <i class="fs-1 bi bi-chevron-double-down"></i></div
-          ></a>
+              <i class="fs-1 bi bi-chevron-double-down"></i>
+            </div>
+          </a>
         </div>
       </section>
       <!-- Second frame -->
@@ -174,20 +181,22 @@
       >
         <div class="row">
           <p class="col-10 text-center offset-1 fs-8">
-            <span class="text-brand-primary fw-bold fs-7">Chaque borne</span
-            ><span class="paragraph-brand">
+            <span class="text-brand-primary fw-bold fs-7">Chaque borne</span>
+            <span class="paragraph-brand">
               est installée en fonction des normes et contraintes du terrain
               et/ou du client. Pour en savoir plus n’hésitez pas à utiliser
               notre
-              <a href="" class="text-brand-primary">formulaire de contact</a>.
+              <a href="" class="text-brand-primary">formulaire de contact</a>
+              .
             </span>
           </p>
         </div>
         <div class="row">
           <p class="mb-4 col-10 fs-8">
-            <span class="text-brand-primary fw-bold fs-7"
-              >Une carte interactive</span
-            ><br />
+            <span class="text-brand-primary fw-bold fs-7">
+              Une carte interactive
+            </span>
+            <br />
             est à disposition pour vous permettre de connaître la localisation
             de chaque ombrière et le nombre de bornes de recharge.
           </p>
@@ -209,14 +218,15 @@
         <div
           class="container-fluid d-flex justify-content-center align-items-center"
         >
-          <a href=""
-            ><div
+          <a href="">
+            <div
               class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
               style="height: 45px; width: 45px"
             >
               <!--Style dans css !-->
-              <i class="fs-1 bi bi-chevron-double-down"></i></div
-          ></a>
+              <i class="fs-1 bi bi-chevron-double-down"></i>
+            </div>
+          </a>
         </div>
       </section>
       <section
@@ -230,14 +240,20 @@
 
         <div class="row">
           <p class="mb-4 col-10 fs-8">
-            <span class="text-brand-primary fw-bold fs-7"
-              >Fondée en 2013 ,</span
-            >
+            <span class="text-brand-primary fw-bold fs-7">
+              Fondée en 2013 ,
+            </span>
             notre société Sunpower est basée à Grenoble. Son capital est de 10
             millions d’euros.
           </p>
         </div>
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="1000"
+        >
           <div class="col-4">
             <img src="../media/serge.png" alt="Serge Turing" />
           </div>
@@ -245,28 +261,45 @@
             <p class="text-end fs-8">
               <span
                 class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize"
-                >Serge turing</span
               >
-              <br />Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-              do eiusmod tempor incididunt ut labore et
+                Serge turing
+              </span>
+              <br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
             </p>
           </div>
         </div>
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="300"
+          data-aos-duration="1000"
+        >
           <div class="col-8">
             <p class="fs-8">
               <span
                 class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize"
-                >Hugo Oppenheimer</span
-              ><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et
+              >
+                Hugo Oppenheimer
+              </span>
+              <br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
             </p>
           </div>
           <div class="col-4">
             <img src="../media/hugo.png" alt="Hugo Oppenheimer" />
           </div>
         </div>
-        <div class="row">
+        <div
+          class="row"
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="600"
+          data-aos-duration="1000"
+        >
           <div class="col-4">
             <img src="../media/alex.png" alt="Alex Pareneinstein" />
           </div>
@@ -274,9 +307,12 @@
             <p class="text-end fs-8">
               <span
                 class="fs-7 text-brand-primary text-shadow fw-bold text-capitalize"
-                >Alex Pareneinstein</span
-              ><br />Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et
+              >
+                Alex Pareneinstein
+              </span>
+              <br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
             </p>
           </div>
         </div>
@@ -284,25 +320,28 @@
           <p class="text-brand-primary fs-7 fw-bold">Points clés:</p>
           <ul class="list-unstyled fs-8 px-4">
             <li>
-              <span class="text-brand-ternary">30M d’euros</span> de levée de
-              fond
+              <span class="text-brand-ternary">30M d’euros</span>
+              de levée de fond
             </li>
             <li>
-              <span class="text-brand-ternary">2M d’euros</span> d’aide de
-              BPIFrance
+              <span class="text-brand-ternary">2M d’euros</span>
+              d’aide de BPIFrance
             </li>
             <li>
               <!-- attention espace non voulu à cause du formateur, à régler avec linter -->
-              Collaboration avec l'<a
+              Collaboration avec l'
+              <a
                 href="https://www.ines-solaire.org/"
                 class="text-brand-primary"
-                >INES</a
-              >, le
+              >
+                INES
+              </a>
+              , le
               <a href="https://www.cea.fr/" class="text-brand-primary">CEA</a>
               et l’
-              <a href="https://www.ademe.fr/" class="text-brand-primary"
-                >ADEME</a
-              >
+              <a href="https://www.ademe.fr/" class="text-brand-primary">
+                ADEME
+              </a>
             </li>
           </ul>
         </div>
@@ -333,7 +372,7 @@
         </ul>
       </div>
       <div class="container-fluid text-center">
-        <a href=""> Nous contacter</a>
+        <a href="">Nous contacter</a>
       </div>
       <hr />
       <div
@@ -341,15 +380,15 @@
         class="container-fluid d-flex justify-content-center"
         style="height: 5em"
       >
-        <i class="bi bi-facebook col-3 fs-1 text-center blue"></i
-        ><i class="bi bi-linkedin col-3 fs-1 text-center blue"></i
-        ><i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
+        <i class="bi bi-facebook col-3 fs-1 text-center blue"></i>
+        <i class="bi bi-linkedin col-3 fs-1 text-center blue"></i>
+        <i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
       </div>
 
       <div id="copyright" class="container text-center">
         <p>
-          <span>&copy;</span> 2022 Sunpower - Produits & Activités autour des
-          énergies renouvelables
+          <span>&copy;</span>
+          2022 Sunpower - Produits & Activités autour des énergies renouvelables
         </p>
       </div>
     </footer>
