--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<body>
 		<main id="main" class="container">
 			<!-- First frame -->
-			<section id="frame1" class="d-flex flex-column justify-content-evenly p-3">
+			<section id="frame1" class="d-flex flex-column justify-content-evenly p-3 d-lg-block">
 				<p class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3">
 					L'énergie <span class="text-brand-ternary">verte</span> &
 					<span class="text-brand-ternary">renouvelable</span> à portée de main
@@ -49,8 +49,11 @@
 						>
 					</p>
 				</div>
+				<div class="row d-none d-lg-block mb-5">
+					<div class="col-6 offset-3"><img src="../media/homepagePanel.png" class="img-fluid" /></div>
+				</div>
 				<div class="row">
-					<p class="text-center col-10 offset-1 fs-8">
+					<p class="text-center col-10 offset-1 fs-8 text-lg-end col-lg-8 offset-lg-4">
 						<span class="text-brand-primary fw-bold fs-7">L’ombrière solaire</span><br />
 						Avec ce bijou de technologie, n’importe quelle véhicule électrique pourra recharger ses batteries avec une
 						<span class="text-brand-ternary">énergie verte et non polluante</span>
@@ -58,7 +61,7 @@
 					</p>
 				</div>
 				<div class="row">
-					<p class="text-end col-10 offset-2 fs-8">
+					<p class="text-end col-10 offset-2 fs-8 text-lg-center col-lg-8 offset-lg-2">
 						<span class="text-brand-primary fw-bold fs-7">Nos collaborateurs</span><br />
 						et partenaires principaux sont l’<a href="https://www.ademe.fr/" class="text-brand-primary">ADEME</a>, l’<a
 							href="https://www.ines-solaire.org/"
@@ -74,7 +77,7 @@
 			<!-- Second frame -->
 			<section id="frame2" class="d-flex flex-column justify-content-evenly p-3">
 				<div class="row">
-					<p class="col-10 text-center offset-1 fs-8">
+					<p class="col-10 text-center offset-1 fs-8 col-lg-8 text-lg-start offset-lg-0">
 						<span class="text-brand-primary fw-bold fs-7">Chaque borne</span
 						><span class="paragraph-brand">
 							est installée en fonction des normes et contraintes du terrain et/ou du client. Pour en savoir plus
@@ -84,17 +87,29 @@
 					</p>
 				</div>
 				<div class="row">
-					<p class="mb-4 col-10 fs-8">
+					<p class="mb-4 col-10 fs-8 text-lg-center col-lg-8 offset-lg-2">
 						<span class="text-brand-primary fw-bold fs-7">Une carte interactive</span><br />
 						est à disposition pour vous permettre de connaître la localisation de chaque ombrière et le nombre de bornes
 						de recharge.
 					</p>
 				</div>
-				<div class="row position-relative p-2">
+				<div class="row position-relative p-2 d-lg-none">
 					<img src="../media/map.png" class="img-fluid opacity-75 p-0 rounded" alt="Carte interactive" />
 					<div class="position-absolute h-100 w-100 d-flex justify-content-center align-items-center">
 						<p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p>
 					</div>
+				</div>
+
+				<div id="map-container-google-1" class="z-depth-1-half map-container d-none d-lg-block">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46221.28625561081!2d3.839064197764833!3d43.61007297556519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af0725dd9db1%3A0xad8756742894e802!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1666879267308!5m2!1sfr!2sfr"
+						width="600"
+						height="450"
+						style="border: 0"
+						allowfullscreen=""
+						loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"
+					></iframe>
 				</div>
 			</section>
 			<section id="frame3" class="d-flex flex-column justify-content-evenly p-3">
