formating links/images

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           data-aos-duration="700"
         >
           <img
-            src="../media/map.png"
+            src="./media/map.png"
             class="img-fluid opacity-75 p-0 rounded"
             alt="Carte interactive"
           />
@@ -169,7 +169,7 @@
           data-aos-duration="1000"
         >
           <div class="col-4">
-            <img src="../media/serge.png" alt="Serge Turing" />
+            <img src="./media/serge.png" alt="Serge Turing" />
           </div>
           <div class="col-8">
             <p class="text-end fs-8">
@@ -204,7 +204,7 @@
             </p>
           </div>
           <div class="col-4">
-            <img src="../media/hugo.png" alt="Hugo Oppenheimer" />
+            <img src="./media/hugo.png" alt="Hugo Oppenheimer" />
           </div>
         </div>
         <div
@@ -215,7 +215,7 @@
           data-aos-duration="1000"
         >
           <div class="col-4">
-            <img src="../media/alex.png" alt="Alex Pareneinstein" />
+            <img src="./media/alex.png" alt="Alex Pareneinstein" />
           </div>
           <div class="col-8">
             <p class="text-end fs-8">
